--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,15 @@
   font-family: var(--font-open-sans), sans-serif;
  }
 }
+
+@layer utilities {
+ .responsive-clip-path {
+  clip-path: polygon(100% 0, 100% 15%, 0% 10%, 0 7%, 0 0);
+ }
+
+ @media (min-width: 768px) {
+  .responsive-clip-path {
+   clip-path: polygon(100% 0, 100% 28%, 49% 20%, 0 45%, 0 0);
+  }
+ }
+}
