--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,8 @@
  --color-foreground: var(--foreground);
  --font-sans: var(--font-open-sans);
  --font-mono: var(--font-open-sans);
+ --font-lovers-quarrel: var(--font-lovers-quarrel);
+ --font-zalando: var(--font-zalando);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
